<resources>
	<string name="advice">We recommend you to use headphones in order to this game.</string>
    <string name="group_name">A game by, Blind Faith Games</string>
    <string name="mode">This application works on portrait mode.</string>
    <string name="interactionMode_select">This is a research project that tries to gather insight on how blind people play games on mobile
	devices and how developers could make games that are not only accessible, but also enjoyable for them. Select an interaction mode depending
	on if you have visual discapacity or not. To select make a long press to select an option</string>
    <string name="interactionMode_select_TTS">This is a research project that tries to gather insight on how blind people play games on mobile
	devices and how developers could make games that are not only accessible, but also enjoyable for them. Select an interaction mode depending
	on if you have visual discapacity or not. To select make a long press to select an option</string>
    <string name="blindMode_label">Blind interaction</string>
    <string name="noBlindMode_label">Standard interaction</string>
    <string name="tts_select">In order to get a better game experience, we recommend you to download the "IVONA Text-to-Speech HQ" synthesizer. Blind Faith Games is not associated or have any relation with IVONA project but we think that is the best
	synthetizer. Would you like to install it?</string>
    <string name="yes_label">Yes</string>
    <string name="no_label">No</string>
    <string name="introMessage">Welcome, please select a difficulty</string>
    <string name="introMainMenu">Main menu of The Shadow of the Past, you can navigate through the menu by making simple taps in the different options
    							 and just make a long press to select one of the options below</string>
    <string name="buttonMessage">Go!</string>
    <string name="app_name">The Shadow of the Past</string>
    <string name="settingsInitialSpeech">Click any option</string>
    <string name="sotp_activity">The Shadow of the Past</string>
    <string name="exitButton">Exit</string>
    <string name="main_title">The Shadow of the Past</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="tutorial_label">Game Tips</string>
    <string name="keyConf_label">Key Configuration</string>
    <string name="about_label">About</string>
    <string name="form_label">Form</string>
    <string name="exit_label">Exit</string>
    <string name="about_title">The Shadow of the Past About </string>
    <string name="about_text"> 
        The Shadow of the Past, 2012. \n\n
		
		The Shadow of the Past is part of Blind Faith Games (BFG), a research project about how to deliver eyes-free game experiences that are enjoyable on your Android&#8482; 
		device regardless of your sight capabilities. If you have some time to spare, please help us to improve the game by filling in the feedback form that can be reached from the main menu.\n\n
		
		
		BFG is a project of the e-UCM research group, developed by Gloria Pozuelo and Javier Álvarez.\n
		e-UCM is a research group of the Department of Software Engineering and Artificial Intelligence at the Complutense University of Madrid.\n\n
		
		More info at: <a href="http://blind-faith-games.e-ucm.es">http://blind-faith-games.e-ucm.es</a>\n
		Contact us at: android@e-ucm.es  \n\n  
		
		Music by www.SoundJay.com &amp; www.freesound.org \n\n 
		
		<i>Android is a trademark of Google Inc.</i>

	</string>
    <string name="settings_label">Settings</string>
    <string name="settings_title">The Shadow of the Past settings</string>
    <string name="settings_shortcut">s</string>
    <string name="main_category">Main</string>
    <string name="profiles_category">Profiles</string>
    <string name="custom_profile_category">Custom Profile</string>
    <string name="music_title">Music</string>
    <string name="music_summary">Play background music</string>
    <string name="tts_title">Default TTS</string>
    <string name="tts_summary">Enables voice synthesizer</string>
    <string name="transcription_title">Transcription mode</string>
    <string name="transcription_summary">It shows text that contains the sinthetizer speech</string>
    <string name="blind_interaction_title">Blind Interaction Mode</string>
    <string name="blind_interaction_summary">It adds one more touch to each screen touch event</string>
    <string name="blind_mode_title">Black Screen Mode</string>
    <string name="blind_mode_summary">Allows to use the application without any visual reference in the game and main menu.</string>
    <string name="game_title">Game</string>
    <string name="flags_title">Flags settings</string>
    <string name="flags_shortcut">f</string>
    <string name="synthetizer_title">Synthesizer</string>
    <string name="onup_title">Drag-drop event</string>
    <string name="onup_summary">Enables a shot when the drag-drop event occurs</string>
    <string name="volume_up">Volume Up</string>
    <string name="volume_down">Volume Down</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="options">Options</string>
    <string name="search">Search</string>
    <string name="alert_dialog_instructions_TTStext">Dialog</string>
    <string name="main_menu_initial_TTStext">Main menu</string>
    <string name="settings_menu_initial_TTStext">Menu settings. 
			    By tapping on each element on this menu changes and reads an option. Particular in this menu you can
			    find two profile options\: A and B whose activation enables another options on the menu. Of course, 
			    you can continue enabling independently all option on the menu. You will find the next options on this menu\: 
   </string>
    <string name="game_play_initial_TTStext">Game Started! You begin in the middle bottom of the screen. Remember you have 
    to find a prey and avoid the predators. By making a long tap on the scoreboard which is situated at the top of the screeen you can
    listen your score.</string>
    <string name="coordinates_information_button_TTStext">Position</string>
    <string name="key_configuration_menu_initial_TTStext">
			  	Key Configuration. By tapping on your left you could listen the action descriptions
			     and by tapping on your right you will change the key related 
			    by an action. If you are in blind interaction mode you have to do a long click
			     to be able to change the configuration. You have the next options\: 
    </string>
    <string name="keydialog">Action configuration</string>
    <string name="keydialog_text">Press any key</string>
    <string name="button_speak_record">Play record in game</string>
    <string name="button_repeat">To repeat the last sinthetizer voice message</string>
    <string name="recordSpeech">Your actual record is</string>
    <string name="counterSpeech">Your actual count is</string>
    <string name="newRecordSpeech">New record!</string>
    <string name="scoreboard_success">Your punctuaction have been incremented to </string>
    <string name="scoreboard_fail">Your punctuaction have been decremented to </string>
    <string name="scoreboard_reset">Your number of consecutive shots is zero.</string>
    <string name="ranking_title">Previous games ranking</string>
    <string name="ranking_speech">Time, date and record</string>
    <string name="dialog_select">Select controls or general instructions</string>
    <string name="initial_message">Ready... Go!</string>
    <string name="ending_lose_message">Game Over</string>
    <string name="ending_win_message">You found your prey</string>
    <string name="game_over_text">You fail</string>
    <string name="game_over_tts">You fail. Double tap on the screen to end</string>
    <string name="screen_change_begins">Screen change begun.</string>
    <string name="screen_change_ends">Screen change ended.</string>
    <string name="instruction_speech">Long click to back to the main menu</string>
    <string name="key_conf_fail">Not a valid key</string>
    <string name="key_conf_success">You have changed the key associated with</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="form_intro">This is a research project that tries to gather insight on how blind people play games on mobile
					devices and how developers could make games that are not only accessible, but also enjoyable
					for them. To achieve these goals, we would like to know some details about you and how you
					interact with technologies in general and games in particular. This will help us to interpret your
					answers to this questionnaire. All the information collected through this questionnaire will be
					anonymous, untraceable and will be treated confidentially and only used for the purpose of the
					study. \n
	</string>
    <string name="q1_context">Mark the option that better describes your current visual level</string>
    <string name="q2_context">Rate how often you play games in your computer or game console. Where 1 means "Never" and 5 "very often"</string>
    <string name="q3_context">Rate how often you play games in your mobile device (phone or tablet). Where 1 means "Never" and 5 "very often"</string>
    <string name="q4_context">Please rate how easy/difficult it was to learn to play. Where 1 means "very difficult" and 5 "very easy".</string>
    <string name="q5_context">Rate how fun it was to play. Where 1 means "very boring" and 5 "very fun".</string>
    <string name="q6_context">Rate how engaging was the game. Where 1 means "not engaging" and 5 "very engaging".</string>
    <string name="q7_context">Rate how pleasant or frustrating was the interaction with the game. Where 1 means "very frustrating" and 5 "very pleasant".</string>
    <string name="q8_context">Rate how you liked the story and narrative atmosphere (if applicable). Where 1 means "I didn\'t like it at all" and 5 "I liked it very much".</string>
    <string name="q9_context">Rate how you liked the accessibility and control settings. Where 1 means "I didn\'t like it at all" and 5 "I liked it very much".</string>
    <string name="q10_context">Rate how you liked the feedback provide by the game. Where 1 means "I didn\'t like it at all" and 5 "I liked it very much".</string>
    <string name="q11_context">Finally, please provide any comments or suggestions to improve the game. Then tap on "Finish" to send the responses to us, and that\'s all!</string>
    <string name="radio11">I am legally blind</string>
    <string name="radio12">My vision is limited</string>
    <string name="radio13">I have no visual disability</string>
    <string name="one_context">1</string>
    <string name="two_context">2</string>
    <string name="three_context">3</string>
    <string name="four_context">4</string>
    <string name="five_context">5</string>
    <string name="na">NA</string>
    <string name="next_context">Next</string>
    <string name="previous_context">Previous</string>
    <string name="finish_context">Finish</string>
    <string name="action_form">You have selected</string>
    <string name="infoKeyConf">associated to</string>
    <string name="infoKeyConffail">associated to any key.</string>
    <string name="screen_off_message">Your screen has turned off.</string>
    <string name="screen_on_message">Your screen has turned on. May be you have to unlock your device.</string>
    <string name="load_text">Sending information... Please wait</string>
    <string name="size_inc">Your size has been incremented.</string>
    <string name="size_dec">Your size has been decremented.</string>
    <string name="form_landscape">This form is showed in landscape.</string>
    <string name="long_tap">Long click on the screen to continue.</string>
    <string name="optionButton">Option</string>
</resources>