<?xml version="1.0" encoding="utf-8"?>
<!--
  Blind Faith Games is a research project of the e-UCM
            research group, developed by Gloria Pozuelo and Javier Álvarez, 
            under supervision by Baltasar Fernández-Manjón and Javier Torrente.
     
      Copyright 2011-2012 e-UCM research group.
    
       e-UCM is a research group of the Department of Software Engineering
            and Artificial Intelligence at the Complutense University of Madrid
            (School of Computer Science).
    
            C Profesor Jose Garcia Santesmases sn,
            28040 Madrid (Madrid), Spain.
    
            For more info please visit:  <http://blind-faith-games.e-ucm.es> or
            <http://www.e-ucm.es>
    
    ****************************************************************************
  	  This file is part of SHADOW OF THE PAST, developed in the Blind Faith Games project.
   
        SHADOW OF THE PAST is free software: you can redistribute it and/or modify
        it under the terms of the GNU Lesser General Public License as published by
        the Free Software Foundation, either version 3 of the License, or
        (at your option) any later version.
    
        SHADOW OF THE PAST is distributed in the hope that it will be useful,
        but WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
        GNU Lesser General Public License for more details.
    
        You should have received a copy of the GNU Lesser General Public License
        along with Adventure.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:orientation="horizontal"
	android:id="@+id/main_root" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/q"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/form_intro"
            android:text="@string/form_intro" >
        </TextView>
        
        <MultiAutoCompleteTextView 
        	android:id="@+id/textfield"
	        android:layout_width="match_parent" 
	        android:layout_height="wrap_content" 
	        android:contentDescription="@string/form_instructions4"
	        android:visibility="gone">
        </MultiAutoCompleteTextView>

        <RadioGroup
            android:id="@+id/ans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/radio11"
                android:text="@string/radio11"
                android:visibility="gone">
            </RadioButton>

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/radio12"
                android:text="@string/radio12" 
                android:visibility="gone">
            </RadioButton>

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/radio13"
                android:text="@string/radio13"
                android:visibility="gone">
            </RadioButton>

            <RadioButton
                android:id="@+id/radio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:contentDescription="@string/na"
                android:text="@string/na"
                android:visibility="gone" >
            </RadioButton>
            
           <RadioButton
                android:id="@+id/radio4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:contentDescription="@string/na"
                android:text="@string/na"
                android:visibility="gone">
            </RadioButton>
            
           <RadioButton
                android:id="@+id/radio5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:contentDescription="@string/na"
                android:text="@string/na" 
                android:visibility="gone">
            </RadioButton>
        </RadioGroup>
        
      <RelativeLayout 
	      	android:layout_width="match_parent" 
	     	android:id="@+id/relativeLayout1"
	       	android:layout_height="wrap_content" 
	       	android:gravity="center">
       
       <Button 
       		android:layout_height="wrap_content" 
	        android:id="@+id/buttonPrevious" 
	        android:text="@string/previous_context" 
	        android:contentDescription="@string/previous_context" 
	        android:layout_width="wrap_content" 
	        android:layout_alignParentTop="true" 
	        android:layout_alignParentRight="true" 
	        android:layout_alignParentLeft="true"
	        android:visibility="gone">
      </Button>
      
      </RelativeLayout>
    
      <Button 
      		android:id="@+id/buttonNext" 
      		android:text="@string/next_context" 
      		android:contentDescription="@string/next_context" 
     		android:layout_width="match_parent" 
      		android:layout_height="wrap_content">
      </Button>
      
   </LinearLayout>


</LinearLayout>
