<?xml version="1.0" encoding="utf-8"?>
<!--
  Blind Faith Games is a research project of the e-UCM
            research group, developed by Gloria Pozuelo and Javier Álvarez, 
            under supervision by Baltasar Fernández-Manjón and Javier Torrente.
     
      Copyright 2011-2012 e-UCM research group.
    
       e-UCM is a research group of the Department of Software Engineering
            and Artificial Intelligence at the Complutense University of Madrid
            (School of Computer Science).
    
            C Profesor Jose Garcia Santesmases sn,
            28040 Madrid (Madrid), Spain.
    
            For more info please visit:  <http://blind-faith-games.e-ucm.es> or
            <http://www.e-ucm.es>
    
    ****************************************************************************
  	  This file is part of SHADOW OF THE PAST, developed in the Blind Faith Games project.
   
        SHADOW OF THE PAST is free software: you can redistribute it and/or modify
        it under the terms of the GNU Lesser General Public License as published by
        the Free Software Foundation, either version 3 of the License, or
        (at your option) any later version.
    
        SHADOW OF THE PAST is distributed in the hope that it will be useful,
        but WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
        GNU Lesser General Public License for more details.
    
        You should have received a copy of the GNU Lesser General Public License
        along with Adventure.  If not, see <http://www.gnu.org/licenses/>.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    android:padding="10dp" >

    <TextView
        android:id="@+id/interactionMode_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/interactionMode_select"
        android:text="@string/interactionMode_select" >
    </TextView>

    <Button
        android:id="@+id/blindMode_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/interactionMode_textView"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_button"
        android:contentDescription="@string/blindMode_label"
        android:text="@string/blindMode_label"
        android:textColor="@color/button" >
    </Button>

    <Button
        android:id="@+id/noBlindMode_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blindMode_button"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_button"
        android:contentDescription="@string/noBlindMode_label"
        android:text="@string/noBlindMode_label"
        android:textColor="@color/button" >
    </Button>

</RelativeLayout>
